--- a/push_swap1/.vscode/settings.json
+++ b/push_swap1/.vscode/settings.json
@@ -1,7 +1,5 @@
 {
     "files.associations": {
-        "push_swap.h": "c",
-        "cstdlib": "c",
-        "random": "c"
+        "__locale": "c"
     }
 }
